fix: undo changes that made button text too small

--- a/public/common/eventCreate.css
+++ b/public/common/eventCreate.css
@@ -119,21 +119,13 @@
         justify-content: space-between;
     }
 
-    .button {
-        border-radius: 1rem;
-        padding: 0.6rem;
-        font-size: 0.5rem;
-        flex-grow: 1;
-        min-width: 0;
-    }
-
     .button-wrapper {
         gap: var(--small-gap);
         justify-content: center;
     }
 
-    .button i {
-        font-size: 0.8rem;
+    .team-member-picture {
+        display: none;
     }
 }
 
